fix: update py-mini-racer to mini-racer

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,8 +11,7 @@ openpyxl>=3.0.3
 jsonpath>=0.82
 tabulate>=0.8.6
 decorator>=4.4.2
-py-mini-racer>=0.6.0
-akracer>=0.0.11
+mini-racer>=0.12.4
 commitizen>=2.35.0
 pre-commit>=2.20.0
 sphinx>=7.4.3
