--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
-aiohttp>=3.11.13
-beautifulsoup4>=4.9.1
-lxml>=4.2.1
-pandas>=0.25
-requests>=2.22.0
-urllib3>=1.25.8
-html5lib>=1.0.1
-tqdm>=4.43.0
-xlrd>=1.2.0
-openpyxl>=3.0.3
+pandas>=1.5.2
+requests>=2.28.1
+lxml>=4.9.1
+matplotlib>=3.6.2
+numpy>=1.23.5
+py-mini-racer>=0.6.4
+pypinyin>=0.46.0
+html5lib>=1.1
+xlrd>=2.0.1
+openpyxl>=3.0.10
 jsonpath>=0.82
-tabulate>=0.8.6
-decorator>=4.4.2
-mini-racer>=0.12.4
-nest_asyncio>=1.6.0
+tqdm>=4.64.1
+colorama>=0.4.6
+beautifulsoup4>=4.11.1
+wheel>=0.38.4
+setuptools>=65.6.3
+pillow>=9.3.0
+plotly>=5.11.0
+dash>=2.7.0
+dashscope>=1.1.0
+zhipuai>=1.0.6
+scikit-learn>=1.3.0
+# 数据库相关依赖
+sqlalchemy>=1.4.0
+pymysql>=1.0.0
