fix: requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,54 @@
-aiohttp>=3.11.13
-beautifulsoup4>=4.9.1
-lxml>=4.2.1
-pandas>=0.25
-requests>=2.22.0
-urllib3>=1.25.8
-html5lib>=1.0.1
-tqdm>=4.43.0
-xlrd>=1.2.0
-openpyxl>=3.0.3
-jsonpath>=0.82
-tabulate>=0.8.6
-decorator>=4.4.2
-mini-racer>=0.12.4
-nest_asyncio>=1.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
+async-timeout==5.0.1
+attrs==25.4.0
+beautifulsoup4==4.14.2
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+colorama==0.4.6
+decorator==5.2.1
+et_xmlfile==2.0.0
+exceptiongroup==1.3.0
+frozenlist==1.8.0
+greenlet==3.2.4
+h11==0.16.0
+html5lib==1.1
+idna==3.11
+jsonpath==0.82.2
+lxml==6.0.2
+mini-racer==0.12.4
+multidict==6.7.0
+nest-asyncio==1.6.0
+numpy==2.0.2
+openpyxl==3.1.5
+outcome==1.3.0.post0
+pandas==2.3.3
+pandas-stubs==2.2.2.240807
+propcache==0.4.1
+pycparser==2.23
+PyMySQL==1.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+selenium==4.36.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
+SQLAlchemy==2.0.44
+tabulate==0.9.0
+tqdm==4.67.1
+trio==0.31.0
+trio-websocket==0.12.2
+types-pytz==2025.2.0.20250809
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+webencodings==0.5.1
+websocket-client==1.9.0
+wsproto==1.2.0
+xlrd==2.0.2
+yarl==1.22.0
