docs: update docs

--- a/.github/workflows/main_dev_check.yml
+++ b/.github/workflows/main_dev_check.yml
@@ -31,13 +31,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install .
 
-      - name: Lint with flake8
+      - name: Lint with Ruff
         run: |
-          pip install flake8
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          pip install ruff
+          ruff check .
+          ruff format --check .
 
       - name: Test with pytest
         run: |
