--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,18 @@ dependencies = [
 [project.optional-dependencies]
 full = ["akqmt"]
 qmt = ["akqmt"]
+dev = [
+    "akqmt>=0.1.0",
+    "commitizen>=4.12.0",
+    "pre-commit>=3.6.2",
+    "sphinx>=7.4.3",
+    "recommonmark>=0.7.1",
+    "sphinx_markdown_tables>=0.0.17",
+    "sphinx_rtd_theme>=1.0.0",
+    "mplfinance>=0.12.10b0",
+    "ruff>=0.14.13",
+    "ruff-lsp>=0.0.53",
+]
 
 [project.urls]
 Homepage = "https://github.com/akfamily/akshare"
