docs: update docs

--- a/.github/workflows/main_dev_check.yml
+++ b/.github/workflows/main_dev_check.yml
@@ -36,8 +36,9 @@ jobs:
       - name: Lint with Ruff
         run: |
           pip install ruff
-          ruff check .
-          ruff format --check .
+          ruff format .
+          ruff check . --fix
+          
 
       - name: Test with pytest
         run: |
